After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760925 - GstGLVideoMixer leaks checker_vbo
GstGLVideoMixer leaks checker_vbo
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.6.2
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-01-21 08:16 UTC by comicfans44
Modified: 2016-04-14 17:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
misc patch to avoid checker_vbo leaks (856 bytes, patch)
2016-01-21 08:16 UTC, comicfans44
committed Details | Review

Description comicfans44 2016-01-21 08:16:18 UTC
Created attachment 319485 [details] [review]
misc patch to avoid checker_vbo leaks

GstGLVideoMixer's checker_vbo didn't get released in _reset_gl
this misc patch address it.
Comment 1 Matthew Waters (ystreet00) 2016-02-01 02:59:59 UTC
commit 7287564f2053e87f9dc1bbf303d98118f5443c3b
Author: Wang Xin-yu (王昕宇) <comicfans44@gmail.com>
Date:   Thu Jan 21 16:10:48 2016 +0800

    glvideomixer: fix checker vbo leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=760925

and 1.6 48730b81e69d80a4b5b0b642796d9d1eed7fdf31