glvideomixer: fix checker vbo leak

https://bugzilla.gnome.org/show_bug.cgi?id=760925